In development:
# Mentioning Check 0.9.12 for now, to fix distcheck target until next release

* Fix issue with string formatting in ck_assert_(u)int_* calls, where using
  the % operator would be interpreted as a string formatter. Bug #96.

* If the LOG/XML/TAP file name is set to "-" either through the
  srunner_set_log() srunner_set_xml() or srunner_set_tap() calls
  or through the related environment variables, the logged data will be
  printed to stdout instead of a file. This is mainly to support using TAP
  for fixtures which expect the results to be reported via stdout. However,
  it is available via all of Check's logging modalities.

* For CMake builds, check_stdint.h was not being installed. This is now
  fixed.

* Check's example under doc/example now also works for CMake projects
  using Visual Studios and MSVC. This includes an example CMake
  configuration.


Mon Jan 20, 2014: Released Check 0.9.12
  based on r1054 (2014-01-16 23:08:03 +0000)

* Additional unit tests created for internal and external Check
  APIs.

* Check now compiled on Windows using MSVC when using CMake and
  NMake. All unit tests pass, though shell script based ones need
  to be run in the MSYS environment.

* Check now compiles on Windows using Visual Studio 10
  when using CMake. check_check passes when run from Visual Studios.

* Always capture the start and end times of tests when using
  NO_FORK mode. Previously the end time was not captured,
  resulting in arbitrary durations being recorded when tests
  failed. Bug #87.

* Added additional configure script checks for support of
  timer_create() on the target system. This allows for
  OpenBSD to compile and run all Check's unit tests successfully. 

* Added a unit test, check_mem_leaks, which can be used against
  valgrind to test for memory leaks. No memory leaks were found.

* Added tcase_add_loop_test support in checkm. Patch from patches #46. 

* Add support for logging in Test Anything Protocol (TAP) format.
